<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_BaseHMIConnectorEvents_ListToDisplay" Id="{a76f8388-425a-0985-338a-d3a600172d4b}">
    <Declaration><![CDATA[TYPE ST_BaseHMIConnectorEvents_ListToDisplay :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>