<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_BaseLoggerElement_HMI" Id="{0ce980ad-4c50-07a7-0c2d-226937f06ada}">
    <Declaration><![CDATA[TYPE ST_BaseLoggerElement_HMI :
STRUCT
	stFilter						: ST_BaseHMIConnectorEvents_Filter;
	arrListOfEventsToDisplay		: ST_BaseHMIConnectorEvents_ListToDisplay;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>